src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>PILA Bulletin Signup</fullName>
        <description>Signup to web site for PILA Bulletin</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PILA Conference Signup</fullName>
        <description>Signup for PILA conference</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Volunteer</fullName>
        <description>Signup from site for volunteering</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accessibility_or_other_special_needs__c</fullName>
        <label>Accessibility or other special needs</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_to_FLAC_main_mailing_list__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add to FLAC main mailing list</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Breakout_Session_first_preference__c</fullName>
        <label>Breakout Session (first preference)</label>
        <picklist>
            <picklistValues>
                <fullName>(1) Institutionalising Pro Bono in Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Mobilising NGOs in using the Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) Ombudsmen &amp; Alternative Routes to Justice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) Clinical Legal Education: Nurturing Future Practitioners</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Breakout_Session_second_preference__c</fullName>
        <label>Breakout Session (second preference)</label>
        <picklist>
            <picklistValues>
                <fullName>(1) Institutionalising Pro Bono in Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Mobilising NGOs in using the Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) Ombudsmen &amp; Alternative Routes to Justice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) Clinical Legal Education: Nurturing Future Practitioners</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conversion_Error__c</fullName>
        <label>Conversion Error</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Admission_Final_Qualification__c</fullName>
        <inlineHelpText>Date (or Expected Date) of Admission / Final Qualification in Ireland
(Called to the Bar of Ireland or admitted to the Roll of Solicitors)</inlineHelpText>
        <label>Date of Admission / Final Qualification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_you_check_this_email_regularly__c</fullName>
        <label>Do you check this email regularly</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_law_specialist_clinic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employment law specialist clinic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_law_specialist_clinic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family law specialist clinic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heard_about_volunteering__c</fullName>
        <label>Heard about volunteering</label>
        <picklist>
            <picklistValues>
                <fullName>Law Society advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous involvement with FLAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteering Ireland website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College / university</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Through a colleague / friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other organisation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Heard_about_volunteering_other__c</fullName>
        <label>Heard about volunteering other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_would_like_to_receive_PILA_Bulletin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I would like to receive PILA Bulletin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Outside_Dublin_please_specify__c</fullName>
        <label>If Outside Dublin, please specify</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immigration_law_specialist_clinic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Immigration law specialist clinic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_General_public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is General public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_NGO_staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is NGO staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Qualifications__c</fullName>
        <label>Legal Qualifications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_exp_Property_Interest_in_Land__c</fullName>
        <label>Level of exp Property/Interest in Land</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_exp_of_Criminal_Law__c</fullName>
        <label>Level of exp of Criminal Law</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_exp_of_Immigration_Refugee__c</fullName>
        <label>Level of exp of Immigration/Refugee</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_exp_of_Neighbour_Disputes__c</fullName>
        <label>Level of exp of Neighbour Disputes</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_exp_of_Succession_Probate__c</fullName>
        <label>Level of exp of Succession/Probate</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_experience_of_Consumer_Law__c</fullName>
        <label>Level of experience of Consumer Law</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_experience_of_Credit_and_Debt__c</fullName>
        <label>Level of experience of Credit and Debt</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_experience_of_Employment_Law__c</fullName>
        <label>Level of experience of Employment Law</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_experience_of_Family_Law__c</fullName>
        <label>Level of experience of Family Law</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_experience_of_Housing_Tenancy__c</fullName>
        <label>Level of experience of Housing / Tenancy</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_experience_of_Personal_Injuries__c</fullName>
        <label>Level of experience of Personal Injuries</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_experience_of_Social_Welfare__c</fullName>
        <label>Level of experience of Social Welfare</label>
        <picklist>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extensive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_of_the_legal_profession__c</fullName>
        <label>Member of the legal profession</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Apprentice Solicitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barrister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate but not fully qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overseas Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-house counsel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal academic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_area_of_legal_expertise__c</fullName>
        <label>Other area of legal expertise</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prefer_Dublin_Inner_City__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prefer Dublin Inner City</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prefer_Dublin_North__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prefer Dublin North</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prefer_Dublin_South__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prefer Dublin South</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prefer_Dublin_West__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prefer Dublin West</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prefer_Outside_Dublin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prefer Outside Dublin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_volunteer_experience__c</fullName>
        <label>Previous volunteer experience</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Professional_status__c</fullName>
        <label>Professional status</label>
        <picklist>
            <picklistValues>
                <fullName>Solicitor qualified to practice in Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barrister qualified to practice in Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified in Ireland but not currently practicing law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apprentice Solicitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Professonal_status_if_other__c</fullName>
        <label>Professonal status, if other</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_FLAC_news_to__c</fullName>
        <label>Send FLAC news to</label>
        <picklist>
            <picklistValues>
                <fullName>Home address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only electronic version via email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_dietary_requirements__c</fullName>
        <label>Special dietary requirements</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_and_or_information__c</fullName>
        <label>Training and/or  information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vol_Research_Capacity_working_groups__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Volunteer in Research Capacity / working groups</inlineHelpText>
        <label>Vol Research Capacity / working groups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vol_training_talks_presentations__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Volunteer Providing training / talks / presentations</inlineHelpText>
        <label>Vol training / talks / presentations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Availability__c</fullName>
        <label>Volunteer Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Weekdays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Notes__c</fullName>
        <label>Volunteer Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Volunteer_Skills__c</fullName>
        <inlineHelpText>Select the skill(s) this person has that should be used to find volunteer jobs.</inlineHelpText>
        <label>Volunteer Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receptionist</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Status__c</fullName>
        <label>Volunteer Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Sign Up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_at_Free_Legal_Advice_Centres__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volunteer at Free Legal Advice Centres</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_with_PILA_Pro_Bono_register__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volunteer with PILA Pro Bono register</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Why_want_to_volunteer__c</fullName>
        <label>Why want to volunteer</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Area_Town__c</fullName>
        <label>Work Area/Town</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_City__c</fullName>
        <label>Work City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Work_Street__c</fullName>
        <label>Work Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Email__c</fullName>
        <description>When Lead is converted to Contact, email will be inserted into selected value.</description>
        <label>Preferred Email</label>
        <picklist>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Phone__c</fullName>
        <description>When Lead is converted to Contact, phone number will be inserted into selected value.</description>
        <label>Preferred Phone</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>ConferenceLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Conversion_Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>contains</operation>
            <value>conference</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.PILA_Conference</value>
        </filters>
        <label>Conference Leads</label>
    </listViews>
    <listViews>
        <fullName>InternationalLeads</fullName>
        <filterScope>Queue</filterScope>
        <label>International Leads</label>
        <queue>InternationalLeads</queue>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>USLeads</fullName>
        <filterScope>Queue</filterScope>
        <label>US Leads</label>
        <queue>USLeads</queue>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <listViews>
        <fullName>Volunteer_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Volunteer</value>
        </filters>
        <label>Volunteer Leads</label>
    </listViews>
    <recordTypes>
        <fullName>PILA_Bulletin</fullName>
        <active>true</active>
        <businessProcess>PILA Bulletin Signup</businessProcess>
        <description>Enquire from PILA Bulletin signup on web site</description>
        <label>PILA Bulletin</label>
    </recordTypes>
    <recordTypes>
        <fullName>PILA_Conference</fullName>
        <active>true</active>
        <businessProcess>PILA Conference Signup</businessProcess>
        <description>Enquire from PILA conference signup on web site</description>
        <label>PILA Conference</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volunteer</fullName>
        <active>true</active>
        <businessProcess>Volunteer</businessProcess>
        <description>Signup to volunteer from web site</description>
        <label>Volunteer</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>